2013-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adapt internet download agent for use by setup tool.

	* src/pkgbase.h: More code rearrangement, exposing...
	(safe_strcmp): ...this in any implementation context, controlled...
	[USES_SAFE_STRCMP && ! HAVE_SAFE_STRCMP]: ...by this; when true...
	(HAVE_SAFE_STRCMP): ...define this to 1, (must be non-zero).
	[IMPLEMENTATION_LEVEL == PACKAGE_BASE_COMPONENT]: Ensure that...
	(USES_SAFE_STRCMP): ...this is defined to 1, (i.e. non-zero).
	(EXTERN_C): Relocate macro definition...
	* src/pkgimpl.h: ...to here; add complementary implementation of...
	(BEGIN_C_DECLS, END_C_DECLS): ...these new macros; define them.

	* src/pkginet.h (pkgDownloadMeter::SpinWait): New static method;
	declare it as inline, to be implemented elsewhere, delegating to...
	(pkgDownloadMeter::SpinWaitAction): ...this new protected virtual
	method; declare and implement it inline, as a "do nothing" base
	class method, to be optionally overridden in a derived class.

	* src/pkginet.cpp (pkgDownloadMeter::SpinWait): Implement it.
	(pkgInternetAgent::OpenURL): Use it to invoke SpinWaitAction().
	(USES_SAFE_STRCMP): Define as 1; (safe_strcmp() is required).
	[IMPLEMENTATION_LEVEL != PACKAGE_BASE_COMPONENT]: Filter out code
	which may not be required in more specialised contexts, then...
	[IMPLEMENTATION_LEVEL == SETUP_TOOL_COMPONENT]: ...add specialised
	variants specific to this.

	* src/pkgnget.cpp [IMPLEMENTATION_LEVEL != PACKAGE_BASE_COMPONENT]:
	Filter out code which may not be required in more specialised context.
	(dmh_setpty): Provide locally declared prototype for external function.
	(pkgDownloadMeterGUI): Add pseudo-terminal diagnostic message window.
	(pkgDownloadMeterGUI::SpinWaitAction): Declare and implement GUI
	specific method specialisation; it invokes a thread, running...
	(pkgDownloadMeterGUI::SpinWait): ...this new static method overload.

2013-04-19  Keith Marshall  <keithmarshall@users.sourceforge.net>
